changes for ui on cart page

--- a/mobile/src/pages/productpage/productpage.html
+++ b/mobile/src/pages/productpage/productpage.html
@@ -20,6 +20,15 @@
 </ion-content>
 
 <ion-footer>
-  
-    <common-footer [iconSelected]="home"></common-footer>
-      </ion-footer>
+    <ion-toolbar>
+
+<ion-tabs selectedIndex="0">
+    <ion-tab tabIcon="home"  > </ion-tab>
+    <ion-tab tabIcon="cart"></ion-tab>
+    <ion-tab tabIcon="search" ></ion-tab>
+    <ion-tab tabIcon="settings"></ion-tab> 
+  </ion-tabs>
+
+
+</ion-toolbar>  
+</ion-footer>
