--- a/mobile/src/pages/cart-details/cart-details.html
+++ b/mobile/src/pages/cart-details/cart-details.html
@@ -9,6 +9,33 @@
 
 <!--Theme Google Card - Full Image Cards-->
 <ion-content>
+
+
+
+
+
+
+
+  <ion-list no-margin>
+    <ion-item item-divider no-lines [ngClass]="animateClass" *ngFor="let item of data;let i = index">
+      <ion-avatar item-start class="imageCats">
+        <img [src]="(item.displayImage == '') ? 'assets/images/background/placeholder.jpg' : item.displayImage"
+          alt="{{item.title}}" />
+      </ion-avatar>
+      <h2 item-title>{{item.product_name}}</h2>
+      <p text-wrap [innerHTML]='item.fullText'></p>
+      <ion-icon icon-small item-right  (click)="deleteFromCart(item.product_id)">
+          <ion-icon name="trash"></ion-icon> 
+      </ion-icon>
+    </ion-item>
+  </ion-list>
+
+
+
+
+
+
+  <!-- 
   <ion-grid no-padding>
     <ion-row>
       <ion-col no-padding col-12 col-md-6 *ngFor="let item of data;let i = index">
@@ -16,8 +43,7 @@
           <ion-item padding>
             <h2>{{item.product_name}}</h2>
             <p text-wrap [innerHTML]='item.fullText'></p>
-            <div item-content>
-              <!-- {{item.increament}} Qty -->
+            <div item-content> 
               <button ion-button (click)="deleteFromCart(item.product_id)">
                 <ion-icon name="trash"></ion-icon>
               </button>
@@ -27,7 +53,12 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+-->
+
+
+
 </ion-content>
+<!--
 <ion-footer no-lines>
   <ion-row>
     <ion-col>
@@ -39,4 +70,21 @@
     </ion-col>
   </ion-row>
 
+</ion-footer>
+
+-->
+
+
+<ion-footer>
+  <ion-toolbar>
+
+    <ion-tabs selectedIndex="0">
+      <ion-tab tabIcon="home" (click)="goBack()"> </ion-tab>
+      <ion-tab tabIcon="cart"></ion-tab>
+      <ion-tab tabIcon="search"></ion-tab>
+      <ion-tab tabIcon="settings"></ion-tab>
+    </ion-tabs>
+
+
+  </ion-toolbar>
 </ion-footer>
