--- a/mobile/src/pages/product-details/product-details.html
+++ b/mobile/src/pages/product-details/product-details.html
@@ -25,7 +25,7 @@
 
 
 
-  <ion-list>
+  <ion-list  *ngIf="show">
     <ion-list-header class="prdDetail">
       {{product.title}}
     </ion-list-header>
@@ -81,6 +81,27 @@
 
 
 
+
+
+    </ion-item> 
+    <ion-item> 
+
+<ion-row>
+
+  <ion-col col-6 style="text-align: right;">
+
+      <button ion-button class="deletebutton">DELETE</button>
+
+
+  </ion-col>
+  <ion-col col-6 style="text-align:left;">
+
+      <button ion-button class="updatebutton"  *ngIf="show" (click)="addtoCart()">UPDATE</button>
+    
+    </ion-col>
+
+
+</ion-row>
 
 
     </ion-item> 
