changes for merging product and details page

--- a/mobile/src/pages/register/register.html
+++ b/mobile/src/pages/register/register.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title class="iontitle"> </ion-title>
+    <ion-title class="iontitle">Register </ion-title>
   </ion-toolbar>
 </ion-header>
 
