--- a/mobile/src/pages/categorylist/categorylist.html
+++ b/mobile/src/pages/categorylist/categorylist.html
@@ -19,22 +19,48 @@
     <ion-row>
       <ion-col col-12>
 
-        <ion-list no-margin>
+        <ion-list>
           <ion-searchbar placeholder="Search" (ionInput)="search($event)" [showCancelButton]="true"
             (ionCancel)="onCancelSearch()">
           </ion-searchbar>
-          <ion-item item-divider no-lines [ngClass]="animateClass" *ngFor="let item of animateItems; let i = index;"
-            (click)="onitemclick('onItemClick', item, $event)">
-            <ion-avatar item-start class="imageCats">
-              <img
-                [src]="(item.image == '') ? 'assets/images/background/placeholder.jpg' : 'http://myshop.guidersmap.com/uploads/category/'+item.image"
-                alt="{{item.title}}" />
-            </ion-avatar>
-            <h2 item-title>{{item.title}}</h2>
-            <!-- <ion-icon icon-small item-right>
-              <i class="icon" [ngClass]="{'icon-heart': item.favorite, 'icon-heart-outline': !item.favorite}"></i>
-            </ion-icon> -->
-          </ion-item>
+
+          <ng-container *ngFor="let item of animateItems; let i = index;">
+
+            <ion-item item-divider [ngClass]="animateClass" (click)="onitemclick('onItemClick', item, $event)"
+              class="listClass  {{item.selected}}">
+              <ion-avatar item-start class="imageCats">
+                <img
+                  [src]="(item.image == '') ? 'assets/images/background/placeholder.jpg' : 'http://myshop.guidersmap.com/uploads/category/'+item.image"
+                  alt="{{item.title}}" />
+              </ion-avatar>
+              <h2 item-title>{{item.title}}</h2> 
+                    <ion-icon icon-small item-right class="icon icon-md " [ngClass]="(item.selected=='active')?'ion-md-arrow-dropdown':'ion-md-arrow-dropright'" role="img"></ion-icon> 
+            </ion-item>
+            <div class="subListClass {{item.selected}}">
+
+
+              <ion-list>
+
+
+
+                <ion-item  *ngFor="let sub of item.sub_cat; let s = index;"> 
+                  <ion-avatar item-start>
+                    <img  [src]="(sub.image == '') ? 'assets/images/background/placeholder.jpg' : 'http://myshop.guidersmap.com/uploads/category/'+sub.image"
+                    alt="{{sub.title}}">
+                  </ion-avatar>
+                  <h2>{{sub.title}}</h2>
+                  <p>{{item.title}} </p>
+                  <button ion-button clear item-end (click)="onSubItemCLick(   sub.id )" >View</button>
+                </ion-item>
+
+
+
+
+              </ion-list>
+
+
+            </div>
+          </ng-container>
         </ion-list>
       </ion-col>
     </ion-row>
@@ -44,9 +70,8 @@
 
 
 
-<ion-footer >
+<ion-footer>
   <ion-toolbar>
-  <common-footer></common-footer>
+    <common-footer></common-footer>
   </ion-toolbar>
 </ion-footer>
-   
