--- a/mobile/src/pages/categorylist/categorylist.html
+++ b/mobile/src/pages/categorylist/categorylist.html
@@ -1,7 +1,7 @@
 <!--Animation components-->
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
+    <button ion-button menuToggle >
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>{{global.category_title}}</ion-title>
@@ -9,7 +9,7 @@
 </ion-header>
 <!--Content-->
 
-<ion-content>
+<ion-content backbutton>
   <!--PAGE APPEARANCE ANIMATIONS - Fade in left-->
   <!-- <appearance-animation-layout-1 [data]="data" [events]="events">
 </appearance-animation-layout-1> -->
