--- a/mobile/src/pages/landing/landing.html
+++ b/mobile/src/pages/landing/landing.html
@@ -8,7 +8,7 @@
       <ion-col no-padding col-12 col-sm-12 col-md-12 text-center class="logoDiv">
         <ion-item transparent text-center no-lines>
           <!---Logo Title-->
-          <img src='../../../assets/veneer_logo.jpg' class="logoImg" />
+          <img src='../../assets/veneer_logo.jpg' class="logoImg" />
         </ion-item> 
       </ion-col>
 <ion-col class="landingButtons" align-items-center>
