--- a/mobile/src/pages/main-product/main-product.html
+++ b/mobile/src/pages/main-product/main-product.html
@@ -1,9 +1,20 @@
 <!---Image gallery components-->
 <ion-header>
   <ion-navbar>
+
+
+    
+      <button ion-button clear icon-start backbutton  menuToggle icon-only>
+          <ion-icon  name="menu" role="img"></ion-icon>  
+        </button>
+        <!-- 
     <button ion-button menuToggle>
       <ion-icon name="menu" class="menuIcon"></ion-icon>
     </button>
+-->
+
+
+
     <ion-title>Dashboard</ion-title>
   </ion-navbar>
 </ion-header>
