--- a/mobile/src/pages/register/register.html
+++ b/mobile/src/pages/register/register.html
@@ -7,41 +7,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content has-header>
-
-
- 
-
-
-
-
-
-
-
-
-
+<ion-content has-header> 
   <form (ngSubmit) ="registerUser()" name="registerForm"  #registerForm="ngForm">
-    <ion-grid>
-
-
-
+    <ion-grid> 
       <ion-row class="mainRow" align-items-center>
 
         <ion-col no-padding col-12 col-sm-12 col-md-12 text-center >
           <ion-item transparent text-center no-lines>
             <!---Logo Title-->
-            <img src='../../../assets/veneer_logo.jpg' class="logoImg" />
+            <img src='assets/veneer_logo.jpg' class="logoImg" />
           </ion-item>
-
         </ion-col>
-
-
-
-
-
         <ion-col no-padding col-12 col-sm-12 col-md-12 text-center>
-
-
 
           <ion-item margin-top transparent class="btmline">
             <ion-label position="floating">
