--- a/mobile/src/pages/product-details/product-details.html
+++ b/mobile/src/pages/product-details/product-details.html
@@ -52,13 +52,11 @@
       </ion-row>
     </ion-item>
     <ion-item>
-      <ion-row>
-        <ion-col col-6 style="text-align: right;" *ngIf="this.launchValue>0">
-          <button ion-button class="deletebutton">DELETE</button>
-        </ion-col>
-        <ion-col *ngIf="this.launchValue>0?'col-6':'col-12'"  [ngStyle]="{'text-align':this.launchValue>0 ? 'left' : 'center' }">
-
-          <button ion-button class="updatebutton" *ngIf="show" (click)="addtoCart()">UPDATE</button>
+      <ion-row> 
+        <ion-col col-12 style="text-align: center;"    >
+          <button ion-button class="deletebutton" *ngIf="this.launchValue>0" (click)="deleteFromCart(product)">Delete</button> 
+          <button ion-button class="updatebutton " *ngIf="this.launchValue>0" (click)="addtoCart()">Update Order</button> 
+          <button ion-button class="updatebutton " *ngIf="this.launchValue==0" (click)="addtoCart()">Place Order</button> 
 
         </ion-col>
 
