--- a/mobile/src/pages/pages-settings/pages-settings.html
+++ b/mobile/src/pages/pages-settings/pages-settings.html
@@ -20,8 +20,8 @@
   </ion-list>
 
 
-  <ion-list *ngFor="let menu of data;" class="menuList" >
-    <ion-item>
+  <ion-list *ngFor="let menu of data; let i = index" class="menuList" >
+    <ion-item (click)="pageNavigate(i)">
       <ion-icon name="{{menu.icon}}" item-start></ion-icon>
         {{menu.title}}
     </ion-item>
